# py-orderbook

./: .gitignore  Dockerfile  README.md  gateio_JNTUSDT_2020-08-05_lob.parquet  gateio_JNTUSDT_2020-08-05_trades.parquet  pyproject.toml
app/: app.py  config.py  parquet.py  types.py  utils.py
app/orderbook/: book.py
app/tardis_client/: __init__.py  book.py  bookbuilder.py  tardis_feed.py
