[tool.poetry]
name = "mktdata-archiver-sample"
version = "1.0"
description = "Market Data Archiver Service Sample"
authors = ["U <u@u.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyarrow = "^0.16.0"
pendulum = "^2.0.3"
python-json-logger = "^0.1.11"
sortedcontainers = "^2.1.0"
six = "^1.14"
pandas = "^1.1.2"
aiohttp = "^3.6.2"
requests = "^2.24.0"
jupyterlab = "^2.2.8"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
ipython = "^7.13.0"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
